<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字中南助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rem">记住用户</string>
    <string name="un">账号：</string>
    <string name="pw">密码：</string>
    <string name="author">Code By Zhu</string>
    <string name="tips">不论通过何种方式登陆，都可以点击下线\n本系统仅供学习使用，界面轻喷....\n如遇各种BUG，请多试几次....o(╯□╰)o</string>
	<string name="login">登陆</string>
	<string name="logout">下线</string>
	<string name="hint_un">数字中南账号</string>
	<string name="hint_pw">数字中南密码</string>
	
</resources>
